Allow passing unicode lists to GStrv properties on Python 2

https://bugzilla.gnome.org/show_bug.cgi?id=744745